feat: Add a InMemory repository to handle current code. fix: Fix an error in unit test and handler about case of AlreadyExists

--- a/AccountManagementApi/AccountManagementApi.csproj
+++ b/AccountManagementApi/AccountManagementApi.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AccountManagement.Application\AccountManagement.Application.csproj" />
+    <ProjectReference Include="..\AccountManagement.Infrastructure\AccountManagement.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
