feat: Connect to a PostgreSQL database with EF Core

--- a/AccountManagementApi/appsettings.Development.json
+++ b/AccountManagementApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Database": "Host=ep-tiny-dust-a5ee26p0.us-east-2.aws.neon.tech;Port=5432;Username=AccountManagement_owner;Password=Rr5fn2hMUTWa;Database=AccountManagement;SSL Mode=Require;Trust Server Certificate=true;"
   }
 }
